--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -2,14 +2,14 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
+    android:id="@+id/bottom_nav"
     app:startDestination="@id/profile_info_fragment">
 
     <fragment
         android:id="@+id/profile_info_fragment"
-        android:label="Profile"
         android:name="com.albatros.gitinfo.presentation.info.profile.ProfileInfoFragment"
-        tools:layout="@layout/fragment_login" >
+        android:label="Profile"
+        tools:layout="@layout/fragment_login">
 
         <argument
             android:name="arg"
@@ -19,8 +19,9 @@
 
     <fragment
         android:id="@+id/repositories_fragment"
-        android:label="Repositories"
         android:name="com.albatros.gitinfo.presentation.info.repos.RepositoriesFragment"
-        tools:layout="@layout/activity_main" />
+        android:label="Repositories"
+        tools:layout="@layout/activity_main">
+    </fragment>
 
 </navigation>
